add pwa to ref folder

--- a/.gitignore
+++ b/.gitignore
@@ -107,3 +107,62 @@ public/js/ref/index.js
 public/js/ref/app.js
 public/_ref/solved.js
 public/_ref/index.js
+public/Solved/.gitignore
+public/Solved/package.json
+public/Solved/server.js
+public/Solved/webpack.config.js
+public/Solved/models/image.js
+public/Solved/models/index.js
+public/Solved/public/index.html
+public/Solved/public/service-worker.js
+public/Solved/public/assets/css/style.css
+public/Solved/public/assets/images/1.jpg
+public/Solved/public/assets/images/2.jpg
+public/Solved/public/assets/images/3.jpg
+public/Solved/public/assets/images/4.jpg
+public/Solved/public/assets/images/5.jpg
+public/Solved/public/assets/images/6.jpg
+public/Solved/public/assets/images/7.jpg
+public/Solved/public/assets/images/8.jpg
+public/Solved/public/assets/images/9.jpg
+public/Solved/public/assets/images/10.jpg
+public/Solved/public/assets/images/11.jpg
+public/Solved/public/assets/images/12.jpg
+public/Solved/public/assets/images/13.jpg
+public/Solved/public/assets/images/14.jpg
+public/Solved/public/assets/images/15.jpg
+public/Solved/public/assets/images/16.jpg
+public/Solved/public/assets/images/17.jpg
+public/Solved/public/assets/images/18.jpg
+public/Solved/public/assets/images/19.jpg
+public/Solved/public/assets/images/20.jpg
+public/Solved/public/assets/images/21.jpg
+public/Solved/public/assets/images/22.jpg
+public/Solved/public/assets/images/23.jpg
+public/Solved/public/assets/images/24.jpg
+public/Solved/public/assets/images/25.jpg
+public/Solved/public/assets/images/26.jpg
+public/Solved/public/assets/images/27.jpg
+public/Solved/public/assets/images/28.jpg
+public/Solved/public/assets/images/29.jpg
+public/Solved/public/assets/images/30.jpg
+public/Solved/public/assets/images/31.jpg
+public/Solved/public/assets/images/32.jpg
+public/Solved/public/assets/images/33.jpg
+public/Solved/public/assets/images/34.jpg
+public/Solved/public/assets/images/35.jpg
+public/Solved/public/assets/images/icons/icon-72x72.png
+public/Solved/public/assets/images/icons/icon-96x96.png
+public/Solved/public/assets/images/icons/icon-128x128.png
+public/Solved/public/assets/images/icons/icon-144x144.png
+public/Solved/public/assets/images/icons/icon-152x152.png
+public/Solved/public/assets/images/icons/icon-192x192.png
+public/Solved/public/assets/images/icons/icon-384x384.png
+public/Solved/public/assets/images/icons/icon-512x512.png
+public/Solved/public/assets/js/app.js
+public/Solved/public/assets/js/cardCreation.js
+public/Solved/public/assets/js/domMethods.js
+public/Solved/public/assets/js/rating.js
+public/Solved/routes/apiRoutes.js
+public/Solved/routes/htmlRoutes.js
+public/Solved/seeders/seed.js
