--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-handlebars": "^5.3.0",
     "express-paginate": "^1.0.2",
     "express-session": "^1.17.1",
+    "mongodb": "^6.15.0",
     "mongoose": "^5.12.4",
     "morgan": "^1.10.0"
   }
